--- a/branding_services.html
+++ b/branding_services.html
@@ -35,7 +35,7 @@
             </nav>
             <a href="tel:+79780000000" class="header-phone">+7 (978) 000-00-00</a>
         </section>
-        <img src="./images/free-audit-blot.png" class="header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot.png" class="paroller header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </header>
         <section class="service-about">
             <div class="container container-service-about">
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </div>
-            <img src="./images/our-projects-blot-2.png" class="service-about__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/our-projects-blot-2.png" class="paroller service-about__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         </section>
         <section class="big-info-service">
             <div class="container container-big-info-service">
@@ -95,7 +95,7 @@
             </div>
         </section>
         <section class="how-affect">
-            <img src="./images/big-info-blot-1.png" class="big-info__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/big-info-blot-1.png" class="paroller big-info__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
             <div class="container container-how-affect">
                 <span class="how-affect-text">Как брендинг влияет на имидж компании:</span>
                 <div class="wrapper-affect">
@@ -129,7 +129,7 @@
                     <li class="dev-stage-items"><span class="number-dev-stage">4</span><p class="dev-stage-text">Презентация клиенту</p></li>
                 </ul>
             </div>
-            <img src="./images/dev-stage-blot-1.png" class="dev-stage__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/dev-stage-blot-1.png" class="paroller dev-stage__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         </section>
         <section class="complex-analysis">
             <div class="container container-complex-analysis">
@@ -267,9 +267,9 @@
                     <button class="send-file">Отправить бриф</button>
                 </form>
             </div>
-            <img src="./images/free-audit-blot.png" class="price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-            <img src="./images/price-blot-1.png" class="price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-            <img src="./images/free-audit-blot-3.png" class="price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/free-audit-blot.png" class="paroller price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/price-blot-1.png" class="paroller price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/free-audit-blot-3.png" class="paroller price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         </section>
         <footer class="footer">
         <div class="container">
