--- a/service-2.html
+++ b/service-2.html
@@ -35,7 +35,7 @@
         </nav>
         <a href="tel:+79780000000" class="header-phone">+7 (978) 000-00-00</a>
     </section>
-<img src="./images/free-audit-blot.png" class="header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+<img src="./images/free-audit-blot.png" class="paroller header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
 </header>
 <section class="service-all">
     <div class="container container-service-all">
@@ -45,39 +45,39 @@
                 <h4 class="service-all-title">Логотип</h4>
                 <span class="sevice-all-sub-title">Ваш фирменый знак</span>
                 <img class="service-all-img" src="images/service-all-img-1.png">
-                <button class="service-all-btn">Подробнее</button>
+                <a href="#" class="service-all-btn">Подробнее</a>
             </div>
             <div class="service-all-item">
                 <h4 class="service-all-title">Упаковка</h4>
                 <span class="sevice-all-sub-title">Конкурентное преимущество продукты</span>
                 <img class="service-all-img" src="images/service-all-img-2.png">
-                <button class="service-all-btn">Подробнее</button>
+                <a href="#" class="service-all-btn">Подробнее</a>
             </div>
             <div class="service-all-item">
                 <h4 class="service-all-title">Брендинг</h4>
                 <span class="sevice-all-sub-title">Имидж и отличительная черта</span>
                 <img class="service-all-img" src="images/service-all-img-3.png">
-                <button class="service-all-btn">Подробнее</button>
+                <a href="#" class="service-all-btn">Подробнее</a>
             </div>
             <div class="service-all-item">
                 <h4 class="service-all-title">Рекламный креатив</h4>
                 <span class="sevice-all-sub-title">Уникальная реклама вашего товара  или услуги</span>
                 <img class="service-all-img" src="images/service-all-img-4.png">
-                <button class="service-all-btn">Подробнее</button>
+                <a href="#" class="service-all-btn">Подробнее</a>
             </div>
             <div class="service-all-item">
                 <h4 class="service-all-title">Ui / Ux дизайн</h4>
                 <span class="sevice-all-sub-title">Создаем интерфейсы для людей</span>
                 <img class="service-all-img" src="images/service-all-img-5.png">
-                <button class="service-all-btn">Подробнее</button>
+                <a href="#" class="service-all-btn">Подробнее</a>
             </div>
         </div>
     </div>
 </section>
 <section class="free-audit">
-        <img src="./images/free-audit-blot.png" class="free-audit__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="">
-        <img src="./images/services-blot-1.png" class="free-audit__paroller-2" data-paroller-factor="0.25" aria-hidden="true" alt="">
-        <img src="./images/free-audit-blot-3.png" class="free-audit__paroller-3" data-paroller-factor="0.15" aria-hidden="true" alt="">
+        <img src="./images/free-audit-blot.png" class="paroller free-audit__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="">
+        <img src="./images/services-blot-1.png" class="paroller free-audit__paroller-2" data-paroller-factor="0.25" aria-hidden="true" alt="">
+        <img src="./images/free-audit-blot-3.png" class="paroller free-audit__paroller-3" data-paroller-factor="0.15" aria-hidden="true" alt="">
         
         <div class="container">
             <div class="free-audit__content">
