--- a/service.html
+++ b/service.html
@@ -38,9 +38,9 @@
     </section>
     <div class="container">
         <section class="header-bottom">
-        <img src="./images/free-audit-blot.png" class="header-bottom__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="">
-        <img src="./images/free-audit-blot-3.png" class="header-bottom__paroller-2" data-paroller-factor="0.25" aria-hidden="true" alt="">
-        <img src="./images/services-blot-1.png" class="header-bottom__paroller-3" data-paroller-factor="0.15" aria-hidden="true" alt="">
+        <img src="./images/free-audit-blot.png" class="paroller header-bottom__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="">
+        <img src="./images/free-audit-blot-3.png" class="paroller header-bottom__paroller-2" data-paroller-factor="0.25" aria-hidden="true" alt="">
+        <img src="./images/services-blot-1.png" class="paroller header-bottom__paroller-3" data-paroller-factor="0.15" aria-hidden="true" alt="">
             <div class="header-bottom-info header-bottom-compr">
                 <span class="header-bottom-info__title ">Услуги increase</span>
                 <span class="header-bottom-info__subtitle header-bottom-info-subtitle-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распеч
@@ -83,16 +83,16 @@
                     </div>
                     <ul class="services-sub">
                         <li class="services-sub__item">
-                            <a href="#" class="services-sub__item-link">Логотип</a>
+                            <a href="service-logo.html" class="services-sub__item-link">Логотип</a>
                         </li>
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">Фирменный стиль</a>
                         </li>
                         <li class="services-sub__item">
-                            <a href="#" class="services-sub__item-link">Упаковка бренда</a>
+                            <a href="service-pack.html" class="services-sub__item-link">Упаковка бренда</a>
                         </li>
                         <li class="services-sub__item">
-                            <a href="#" class="services-sub__item-link">Рекламный креатив</a>
+                            <a href="service-advertising.html" class="services-sub__item-link">Рекламный креатив</a>
                         </li>
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">UX/IX дизайн</a>
@@ -119,7 +119,7 @@
                             <a href="#" class="services-sub__item-link">Сложные решения</a>
                         </li>
                     </ul>
-                    <a href="#" class="services-list__item-link">Подробнее</a>
+                    <a href="web-site.html" class="services-list__item-link">Подробнее</a>
                 </div>
                 <div class="services-list__item">
                     <div class="wrapper-item-top">
@@ -128,13 +128,13 @@
                     </div>
                     <ul class="services-sub">
                         <li class="services-sub__item">
-                            <a href="#" class="services-sub__item-link">SEO</a>
+                            <a href="seo.html" class="services-sub__item-link">SEO</a>
                         </li>
                         <li class="services-sub__item">
-                            <a href="#" class="services-sub__item-link">Контекстная реклама</a>
+                            <a href="service-context.html" class="services-sub__item-link">Контекстная реклама</a>
                         </li>
                         <li class="services-sub__item">
-                            <a href="#" class="services-sub__item-link">SMM</a>
+                            <a href="smm.html" class="services-sub__item-link">SMM</a>
                         </li>
                         <li class="services-sub__item">
                             <a href="#" class="services-sub__item-link">Контент</a>
@@ -143,7 +143,7 @@
                             <a href="#" class="services-sub__item-link">Web-аналитика</a>
                         </li>
                     </ul>
-                    <a href="#" class="services-list__item-link">Подробнее</a>
+                    <a href="outside.html" class="services-list__item-link">Подробнее</a>
                 </div>
                 <div class="services-list__item">
                     <div class="wrapper-item-top">
@@ -209,9 +209,9 @@
     </div>
 </section>
 <section class="free-audit">
-        <img src="./images/free-audit-blot.png" class="free-audit__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="">
-        <img src="./images/services-blot-1.png" class="free-audit__paroller-2" data-paroller-factor="0.25" aria-hidden="true" alt="">
-        <img src="./images/free-audit-blot-3.png" class="free-audit__paroller-3" data-paroller-factor="0.15" aria-hidden="true" alt="">
+        <img src="./images/free-audit-blot.png" class="paroller free-audit__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="">
+        <img src="./images/services-blot-1.png" class="paroller free-audit__paroller-2" data-paroller-factor="0.25" aria-hidden="true" alt="">
+        <img src="./images/free-audit-blot-3.png" class="paroller free-audit__paroller-3" data-paroller-factor="0.15" aria-hidden="true" alt="">
         
         <div class="container">
             <div class="free-audit__content">
@@ -297,7 +297,6 @@
             </section>
         </div>
     </footer>
-
 <script src="./js/jquery-3.4.1.min.js"></script>
 <script src="./js/jquery.paroller.min.js"></script>
 <script defer type="text/javascript" src="js/slick.min.js"></script>
