--- a/smm.html
+++ b/smm.html
@@ -35,7 +35,7 @@
         </nav>
         <a href="tel:+79780000000" class="header-phone">+7 (978) 000-00-00</a>
     </section>
-<img src="./images/free-audit-blot.png" class="header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+<img src="./images/free-audit-blot.png" class="paroller header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
 </header>
 <section class="service-about service-smm-about">
     <div class="container contaner-service-about contaner-service-smm-about">
@@ -50,7 +50,7 @@
     </div>
 </section>
 <section class="what-service">
-    <img src="./images/dev-stage-blot-1.png" class="what-service__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/dev-stage-blot-1.png" class="paroller what-service__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         <div class="container containere-what-service containere-what-service-smm">
             <img class="what-service-smm-img" src="images/what-service-smm-img.png">
             <div class="what-service-content">
@@ -77,7 +77,7 @@
                 <span class="what-service-text">Секрет нашего успеха в индивидуальном подходе</span>
             </div>
         </div>
-    <img src="./images/what-service--blot-1.png" class="what-service__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/what-service--blot-1.png" class="paroller what-service__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
 </section>
 <section class="why-seo">
     <!-- <img src="images/left-fon.png" class="why-seo-fon"> -->
@@ -97,9 +97,9 @@
     </div>
 </section>
 <section class="how-affect how-affect-smm">
-    <img src="./images/big-info-blot-1.png" class="big-info__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-    <img src="./images/big-info-blot-1.png" class="how-affect__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-    <img src="./images/our-projects-blot-1.png" class="how-affect__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/big-info-blot-1.png" class="paroller big-info__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/big-info-blot-1.png" class="paroller how-affect__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/our-projects-blot-1.png" class="paroller how-affect__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container container-how-affect">
         <span class="how-affect-text">Как стратегическое присутствие Вашего бизнеса в социальных медиа влияет на позиционирование Вашего бизнеса</span>
         <div class="wrapper-affect">
@@ -233,7 +233,7 @@
     <img class="fon-img right-fon" src="images/right-fon.png">
 </section>
 <section class="result-client">
-    <img src="./images/result-client-blot-1.png" class="result-client-smm__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/result-client-blot-1.png" class="paroller result-client-smm__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container container-result-client">
         <div class="wrapper-result-client-title">
             <h3 class="result-client-title">Результаты наших клиентов</h3>
@@ -309,9 +309,9 @@
             <button class="send-file">Отправить бриф</button>
         </form>
         </div>
-        <img src="./images/free-audit-blot.png" class="price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-        <img src="./images/price-blot-1.png" class="price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-        <img src="./images/free-audit-blot-3.png" class="price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot.png" class="paroller price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/price-blot-1.png" class="paroller price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot-3.png" class="paroller price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </section>
     <footer class="footer">
     <div class="container">
