--- a/web-site.html
+++ b/web-site.html
@@ -35,10 +35,10 @@
             </nav>
             <a href="tel:+79780000000" class="header-phone">+7 (978) 000-00-00</a>
         </section>
-        <img src="./images/free-audit-blot.png" class="header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot.png" class="paroller header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </header>
     <section class="small-info-service">
-            <img src="./images/site-blot-1.png" class="header__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/site-blot-1.png" class="paroller header__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         <div class="container container-small-info-service container-small-info-service-web-site">
             <div class="small-info-service-about">
                 <h3 class="smal-info-service-title">Веб-сайты</h3>
@@ -70,7 +70,7 @@
         </div>
     </section>
     <section class="how-affect">
-        <img src="./images/big-info-blot-1.png" class="how-affect__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/big-info-blot-1.png" class="paroller how-affect__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         <div class="container container-how-affect">
             <span class="how-affect-text">Как брендинг влияет на имидж компании:</span>
             <div class="wrapper-affect">
@@ -162,7 +162,7 @@
                 <li class="dev-stage-items"><span class="number-dev-stage">4</span><p class="dev-stage-text">Запуск сайта</p></li>
             </ul>
         </div>
-        <img src="./images/dev-stage-blot-1.png" class="dev-stage__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/dev-stage-blot-1.png" class="paroller dev-stage__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </section>
     <section class="complex-analysis">
         <div class="container container-complex-analysis">
@@ -184,7 +184,7 @@
                 <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Систематизируем данные</p></li>
             </ul>
         </div>
-        <img src="./images/free-audit-blot.png" class="complex-analysis-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot.png" class="paroller complex-analysis-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </section>
     <section class="structure-design">
         <div class="container container-structure-design">
@@ -222,7 +222,7 @@
         </div>
     </section>
     <section class="dev-site">
-    <img src="./images/dev-stage-blot-1.png" class="dev-site__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/dev-stage-blot-1.png" class="paroller dev-site__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         <div class="container container-dev-site">
             <div class="wrapper-dev-site">
                 <h3 class="dev-site-title">Разработка сайта и подготовка к запуску</h3>
@@ -230,7 +230,7 @@
             </div>
             <img class="dev-site-img" src="images/dev-site-img.png">
         </div>
-    <img src="./images/big-info-blot-1.png" class="dev-site__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;"> 
+    <img src="./images/big-info-blot-1.png" class="paroller dev-site__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;"> 
     </section>
     <section class="run-site">
         <div class="container container-run-site">
@@ -248,8 +248,8 @@
         </div>  
     </section>
     <section class="projects">
-            <img src="./images/our-projects-blot-1.png" class="projects__paroller-1" data-paroller-factor="0.15" aria-hidden="true" alt="">
-            <img src="./images/our-projects-blot-2.png" class="projects__paroller-2" data-paroller-factor="0.35" aria-hidden="true" alt="">
+            <img src="./images/our-projects-blot-1.png" class="paroller projects__paroller-1" data-paroller-factor="0.15" aria-hidden="true" alt="">
+            <img src="./images/our-projects-blot-2.png" class="paroller projects__paroller-2" data-paroller-factor="0.35" aria-hidden="true" alt="">
     
             <div class="container wrapper-project">
                 <h2 class="section-title projects__title">Наши работы</h2>
@@ -353,9 +353,9 @@
                     <button class="send-file">Отправить бриф</button>
                 </form>
             </div>
-            <img src="./images/free-audit-blot.png" class="price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-            <img src="./images/price-blot-1.png" class="price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-            <img src="./images/free-audit-blot-3.png" class="price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/free-audit-blot.png" class="paroller price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/price-blot-1.png" class="paroller price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+            <img src="./images/free-audit-blot-3.png" class="paroller price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         </section>
         <footer class="footer">
         <div class="container">
