--- a/seo.html
+++ b/seo.html
@@ -35,7 +35,7 @@
         </nav>
         <a href="tel:+79780000000" class="header-phone">+7 (978) 000-00-00</a>
     </section>
-<img src="./images/free-audit-blot.png" class="header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+<img src="./images/free-audit-blot.png" class="paroller header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
 </header>
 <section class="seo-about">
     <div class="container container-seo-about">
@@ -48,7 +48,7 @@
     </div>
 </section>
 <section class="what-service">
-<img src="./images/dev-stage-blot-1.png" class="what-service__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+<img src="./images/dev-stage-blot-1.png" class="paroller what-service__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container containere-what-service">
         <div class="what-service-content what-service-seo-content">
             <h3 class="what-service-title">Что такое SEO?</h3>
@@ -60,7 +60,7 @@
     </div>
 </section>
 <section class="what-service what-service-seo">
-<img src="./images/free-audit-blot.png" class="what-service-seo__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+<img src="./images/free-audit-blot.png" class="paroller what-service-seo__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container containere-what-service">
         <img class="what-service-img " src="images/what-service-img-3.png">
         <div class="what-service-content">
@@ -73,10 +73,10 @@
             </ul>
         </div>
     </div>
-<img src="./images/what-service--blot-1.png" class="what-service__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+<img src="./images/what-service--blot-1.png" class="paroller what-service__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
 </section>
 <section class="how-affect how-affect-seo">
-    <img src="./images/big-info-blot-1.png" class="how-affect__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/big-info-blot-1.png" class="paroller how-affect__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container container-how-affect">
         <span class="how-affect-text">Как грамотно настроенная Поисковая оптимизация (SEO) влияет на позиционирование Вашего бизнеса в Сети</span>
         <div class="wrapper-affect">
@@ -136,7 +136,7 @@
             <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Систематизируем данные</p></li>
         </ul>
     </div>
-<img src="./images/free-audit-blot.png" class="complex-analysis-seo__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+<img src="./images/free-audit-blot.png" class="paroller complex-analysis-seo__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
 </section>
 <section class="complex-analysis complex-analysis-seo">
     <div class="container container-complex-analysis container-complex-analysis-seo">
@@ -185,7 +185,7 @@
             <li class="analysis-item analysis-item-right"><p class="analysis-item-text">Систематизируем данные</p></li>
         </ul>
     </div>
-    <img src="./images/big-info-blot-1.png" class="complex-analysis-seo__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/big-info-blot-1.png" class="paroller complex-analysis-seo__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
 </section>
 <section class="complex-analysis complex-analysis-seo">
     <div class="container container-complex-analysis container-complex-analysis-seo">
@@ -258,9 +258,9 @@
                 <button class="send-file">Отправить бриф</button>
             </form>
         </div>
-        <img src="./images/free-audit-blot.png" class="price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-        <img src="./images/price-blot-1.png" class="price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-        <img src="./images/free-audit-blot-3.png" class="price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot.png" class="paroller price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/price-blot-1.png" class="paroller price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot-3.png" class="paroller price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </section>
     <footer class="footer">
     <div class="container">
