--- a/service-context.html
+++ b/service-context.html
@@ -35,7 +35,7 @@
             </nav>
             <a href="tel:+79780000000" class="header-phone">+7 (978) 000-00-00</a>
         </section>
-        <img src="./images/free-audit-blot.png" class="header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot.png" class="paroller header__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </header>
     <section class="service-about service-context-about">
         <div class="container contaner-service-about contaner-service-context-about">
@@ -50,7 +50,7 @@
         </div>
     </section>
     <section class="what-service">
-    <img src="./images/dev-stage-blot-1.png" class="what-service__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/dev-stage-blot-1.png" class="paroller what-service__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
         <div class="container containere-what-service">
             <img class="what-service-img" src="images/what-service-img.png">
             <div class="what-service-content">
@@ -64,7 +64,7 @@
                 </span>
             </div>
         </div>
-    <img src="./images/what-service--blot-1.png" class="what-service__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/what-service--blot-1.png" class="paroller what-service__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </section>
     <section class="land-services-list">
         <div class="container container-land-services-list">
@@ -98,9 +98,9 @@
         </div>
 </section>
 <section class="how-affect how-affect-context">
-    <img src="./images/big-info-blot-1.png" class="big-info__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-    <img src="./images/big-info-blot-1.png" class="how-affect__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-    <img src="./images/our-projects-blot-1.png" class="how-affect__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/big-info-blot-1.png" class="paroller big-info__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/big-info-blot-1.png" class="paroller how-affect__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/our-projects-blot-1.png" class="paroller how-affect__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container container-how-affect">
         <span class="how-affect-text">Как наличие качественной Контекстной Рекламы влияет на позиционирование Вашего бизнеса в Сети</span>
         <div class="wrapper-affect">
@@ -138,7 +138,7 @@
     </div>
 </section>
 <section class="stage-setting">
-        <img src="./images/stage-setting-blot-1.png" class="stage-setting__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/stage-setting-blot-1.png" class="paroller stage-setting__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container container-stage-setting">
         <h3 class="stage-settig-title">Этапы настройки рекламной компании</h3>
         <div class="stage-setting-list">
@@ -173,7 +173,7 @@
     </div>
 </section>
 <section class="stage-setting">
-        <img src="./images/stage-setting-blot-2.png" class="stage-setting__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/stage-setting-blot-2.png" class="paroller stage-setting__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container container-stage-setting">
         <div class="stage-setting-list">
            <span class="stage-setting-item"><p class="stage-setting-item-text"> Подготовка к запуску</p></span> 
@@ -232,7 +232,7 @@
             </ul>
         </div>
     </div>
-    <img src="./images/free-audit-blot.png" class="stage-setting__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+    <img src="./images/free-audit-blot.png" class="paroller stage-setting__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
 </section>
 <section class="warranty">
     <div class=" container container-warranty">
@@ -252,7 +252,7 @@
     </div>
 </section>
 <section class="result-client">
-        <img src="./images/result-client-blot-1.png" class="result-client__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/result-client-blot-1.png" class="paroller result-client__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     <div class="container container-result-client">
         <div class="wrapper-result-client-title">
             <h3 class="result-client-title">Результаты наших клиентов</h3>
@@ -360,9 +360,9 @@
             <button class="send-file">Отправить бриф</button>
         </form>
         </div>
-        <img src="./images/free-audit-blot.png" class="price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-        <img src="./images/price-blot-1.png" class="price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
-        <img src="./images/free-audit-blot-3.png" class="price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot.png" class="paroller price__paroller-1" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/price-blot-1.png" class="paroller price__paroller-2" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
+        <img src="./images/free-audit-blot-3.png" class="paroller price__paroller-3" data-paroller-factor="0.2" aria-hidden="true" alt="" style="transform: translate(0px, 21px); transition: transform 0.1s ease 0s; will-change: transform;">
     </section>
     <footer class="footer">
     <div class="container">
